--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
+  "name": "Simple Socket Chatting",
+  "version": "1.0.0",
   "description": "",
+  "main": "index.js",
   "dependencies": {
     "express": "^4.18.2",
     "moment": "^2.29.4",
